<resources>
    <string name="app_name">Temperature Cricket</string>
    <string name="degree_result">The approximate temperature outside is %.1f degrees Celsius</string>
    <string name="num_chips_hint">Number of chirps in 25 seconds</string>
    <string name="main_info">Did you know you can determine the temperature outside by counting the number of chirps the
        cricket makes? Just count the number of chirps one makes in 25 seconds and place that number in the box below:
    </string>
    <string name="calculate_temperature">Calculate Temperature</string>
    <string name="thermometer_desc">Image of a thermometer</string>
</resources>
