<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="196dp" app:srcCompat="@mipmap/thermometer" android:id="@+id/thermo_img"
            android:contentDescription="@string/thermometer_desc"/>
    <TextView
            android:text="@string/main_info"
            android:layout_width="match_parent"
            android:layout_height="93dp" android:id="@+id/tvMainInfo" android:textStyle="bold"
            android:gravity="center_horizontal" android:layout_marginLeft="15dp" android:layout_marginRight="15dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etNumChirps" android:hint="@string/num_chips_hint"
            android:gravity="center_horizontal" android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
            android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <Button
            android:text="@string/calculate_temperature"
            android:layout_width="match_parent"
            android:layout_height="65dp" android:id="@+id/btnSubmitTemp" android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF" android:textStyle="bold" android:textSize="16sp"/>
    <TextView
            android:text="@string/degree_result"
            android:layout_width="match_parent"
            android:layout_height="91dp" android:id="@+id/tvTempRes" android:gravity="center_horizontal"
            android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:textStyle="bold"
            android:layout_marginTop="20dp"/>
</LinearLayout>